--- a/index.html
+++ b/index.html
@@ -28,8 +28,50 @@
 
       <a href="#" class="btn btn--white btn--animated">Discover our tours </a>
     </div>
-
   </header>
+
+  <main>
+    <section class="section-about">
+      <!-- utility class to center text -->
+      <div class="u-center-text u-margin-bottom-big">
+        <h2 class="heading-secondary">
+          Exciting tours for adventurous people
+        </h2>
+      </div>
+
+
+      <section class="grid-test">
+        <div class="row">
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magnam est atque earum expedita! Eos tenetur repellat nam minima
+              libero. Ducimus aliquam repellendus nam voluptates error modi explicabo beatae placeat?
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit magnam est atque earum expedita! Eos tenetur repellat nam minima
+              libero.
+            </p>
+
+            <a href="#" class="btn-text">Learn More &rarr;</a>
+          </div>
+
+          <div class="col-1-of-2">
+            <div class="composition">
+              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
+              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
+              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+            </div>
+          </div>
+        </div>
+
+      </section>
+  </main>
+
+
+  <!--
   <section class="grid-test">
     <div class="row">
       <div class="col-1-of-2">
@@ -95,8 +137,8 @@
       <div class="col-3-of-4">
         Col 3 of 4
       </div>
-
-  </section>
+    </section>
+    -->
 
 
 </body>
