--- a/index.html
+++ b/index.html
@@ -70,7 +70,52 @@
       </section>
   </main>
 
+  <section class="section-features">
+    <div class="row">
 
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="icon-basic-world feature-box__icon"></i>
+          <h3 class="heading-tertiary u-margin-small">Explore the world</h3>
+          <p class="feature-box__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="icon-basic-compass feature-box__icon"></i>
+          <h3 class="heading-tertiary u-margin-small">Meet Nature</h3>
+          <p class="feature-box__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="icon-basic-map feature-box__icon"></i>
+          <h3 class="heading-tertiary u-margin-small">Find your way</h3>
+          <p class="feature-box__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+          </p>
+        </div>
+      </div>
+
+      <div class="col-1-of-4">
+        <div class="feature-box">
+          <i class="icon-basic-heart feature-box__icon"></i>
+          <h3 class="heading-tertiary u-margin-small">Live a healthier life</h3>
+          <p class="feature-box__text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+          </p>
+        </div>
+
+      </div>
+
+    </div>
+  </section>
   <!--
   <section class="grid-test">
     <div class="row">
