--- a/index.html
+++ b/index.html
@@ -68,54 +68,96 @@
         </div>
 
       </section>
+
+      <section class="section-features">
+        <div class="row">
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-world feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-small">Explore the world</h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-compass feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-small">Meet Nature</h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-map feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-small">Find your way</h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="icon-basic-heart feature-box__icon"></i>
+              <h3 class="heading-tertiary u-margin-small">Live a healthier life</h3>
+              <p class="feature-box__text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
+              </p>
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Most popular tours
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front  card__side--front--1">
+                <div class="card__picture  card__picture--1">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">The Sea Explorer</span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>3 day tours</li>
+                    <li>Up to 30 people</li>
+                    <li>2 tour guides</li>
+                    <li>Sleep in cozy hotels</li>
+                    <li>Difficulty: easy</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card__side card__side--back  card__side--back-1">
+                CARD BACK
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+
+          </div>
+          <div class="col-1-of-3">
+
+          </div>
+        </div>
+
+      </section>
+
   </main>
-
-  <section class="section-features">
-    <div class="row">
-
-      <div class="col-1-of-4">
-        <div class="feature-box">
-          <i class="icon-basic-world feature-box__icon"></i>
-          <h3 class="heading-tertiary u-margin-small">Explore the world</h3>
-          <p class="feature-box__text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
-          </p>
-        </div>
-      </div>
-
-      <div class="col-1-of-4">
-        <div class="feature-box">
-          <i class="icon-basic-compass feature-box__icon"></i>
-          <h3 class="heading-tertiary u-margin-small">Meet Nature</h3>
-          <p class="feature-box__text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
-          </p>
-        </div>
-      </div>
-
-      <div class="col-1-of-4">
-        <div class="feature-box">
-          <i class="icon-basic-map feature-box__icon"></i>
-          <h3 class="heading-tertiary u-margin-small">Find your way</h3>
-          <p class="feature-box__text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
-          </p>
-        </div>
-      </div>
-
-      <div class="col-1-of-4">
-        <div class="feature-box">
-          <i class="icon-basic-heart feature-box__icon"></i>
-          <h3 class="heading-tertiary u-margin-small">Live a healthier life</h3>
-          <p class="feature-box__text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam, exercitationem.
-          </p>
-        </div>
-
-      </div>
-
-    </div>
-  </section>
   <!--
   <section class="grid-test">
     <div class="row">
