--- a/index.html
+++ b/index.html
@@ -241,12 +241,12 @@
       <div class="row">
         <div class="story">
           <figure class="story__shape">
-
+            <img src="img/nat-8.jpg" alt="Person on a tour" class="story__image">
           </figure>
           <div class="story__text">
             <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family.</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, error. Lorem ipsum dolor sit amet consectetur adipisicing
-              elit. Vitae, qui.</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea, error. Lorem ipsum dolor, sit amet consectetur
+              adipisicing elit. Tempore, sit.Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, qui.</p>
           </div>
         </div>
       </div>
