--- a/index.html
+++ b/index.html
@@ -304,6 +304,31 @@
                 <input type="email" class="form__input" placeholder="Email Address" id="email" required>
                 <label for="email" class="form__label">Email Address</label>
               </div>
+
+              <!-- radio ids have to match in order for the radio to switch instead of highlighting both-->
+              <div class="form_group">
+                <!-- when the radio gets clicked the default form input(form__radio-input) will be picked 
+                    but will be hidden as a custom button (from__radio-button)will show because the default button cannot be styled-->
+                <div class="form__radio-group u-margin-bottom-medium">
+                  <input type="radio" class="form__radio-input" id="small" name="size">
+                  <label for="small" class="form__radio-label">
+                    <span class="form__radio-button"></span>  
+                    Small tour group</label>
+                </div>
+
+
+                <div class="form__radio-group">
+                  <input type="radio" class="form__radio-input" id="large" name="size">
+                  <label for="large" class="form__radio-label">
+                        <span class="form__radio-button"></span>    
+                    Large tour group</label>
+                </div>
+              </div>
+
+              <div class="form__group">
+                <button class="btn btn--green">Next Step &rarr;</button>
+              </div>
+
             </form>
           </div>
 
