--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
 
-      <a href="#" class="btn btn--white btn--animated">Discover our tours </a>
+      <a href="#popup" class="btn btn--white btn--animated">Discover our tours </a>
     </div>
   </header>
 
@@ -141,7 +141,7 @@
       </div>
     </section>
 
-    <section class="section-tours">
+    <section class="section-tours" id="section-tours">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
           Most popular tours
@@ -176,14 +176,14 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$297</p>
                 </div>
-                <a href="#" class="btn btn--white">Book Now!</a>
+                <a href="#popup" class="btn btn--white">Book Now!</a>
               </div>
             </div>
           </div>
         </div>
 
         <div class="col-1-of-3">
-          <div class="card">
+          <div class="card" id="card">
             <div class="card__side card__side--front  card__side--front">
               <div class="card__picture  card__picture--2">
                 &nbsp;
@@ -208,7 +208,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$497</p>
                 </div>
-                <a href="#" class="btn btn--white">Book Now!</a>
+                <a href="#popup" class="btn btn--white">Book Now!</a>
               </div>
             </div>
           </div>
@@ -390,6 +390,30 @@
       </div>
     </div>
   </footer>
+
+  <div class="popup" id="popup">
+    <div class="popup__content">
+
+      <div class="popup__left">
+        <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+        <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+      </div>
+
+      <div class="popup__right">
+        <a href="#section-tours" class="popup__close">&times;</a>
+        <h2 class="heading-secondary u-margin-bottom-small">Start Boooking Now</h2>
+        <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+        <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum aliquid, laboriosam autem vitae, quibusdam neque
+          maxime quaerat non recusandae, debitis hic quos adipisci commodi molestiae magnam illo itaque a fuga. Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Esse doloremque necessitatibus doloribus dolorum aperiam! Unde nostrum
+          atque quibusdam voluptatem inventore eligendi dolore amet, aliquid ratione iure explicabo quidem pariatur doloremque
+          deserunt, reiciendis aperiam laboriosam recusandae dolorum dolor reprehenderit, molestias animi.</p>
+
+        <a href="#card" class="btn btn--green">Book now</a>
+      </div>
+    </div>
+
+  </div>
   <!--
   <section class="grid-test">
     <div class="row">
