--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
 
-      <a href="#popup" class="btn btn--white btn--animated">Discover our tours </a>
+      <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours </a>
     </div>
   </header>
 
@@ -242,7 +242,7 @@
                   <p class="card__price-only">Only</p>
                   <p class="card__price-value">$897</p>
                 </div>
-                <a href="#" class="btn btn--white">Book Now!</a>
+                <a href="#popup" class="btn btn--white">Book Now!</a>
               </div>
             </div>
           </div>
@@ -414,6 +414,7 @@
     </div>
 
   </div>
+
   <!--
   <section class="grid-test">
     <div class="row">
