--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
     <nav class="navigation__nav">
       <ul class="navigation__list">
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>  About Natours</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span> Your Benefits</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span> Popular Tours</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span> Stories</a></li>
-        <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span> Book Now</a></li>
+        <li class="navigation__item"><a href="#section-about" class="navigation__link"><span>01</span>  About Natours</a></li>
+        <li class="navigation__item"><a href="#section-features" class="navigation__link"><span>02</span> Your Benefits</a></li>
+        <li class="navigation__item"><a href="#section-tours" class="navigation__link"><span>03</span> Popular Tours</a></li>
+        <li class="navigation__item"><a href="#section-stories" class="navigation__link"><span>04</span> Stories</a></li>
+        <li class="navigation__item"><a href="#section-popup" class="navigation__link"><span>05</span> Book Now</a></li>
 
       </ul>
     </nav>
@@ -57,7 +57,7 @@
   </header>
 
   <main>
-    <section class="section-about">
+    <section class="section-about" id="section-about">
       <!-- utility class to center text -->
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">
@@ -86,16 +86,28 @@
 
         <div class="col-1-of-2">
           <div class="composition">
+
+            <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" sizs="(max-width: 900px) 20vw (max-width: 600px) 30vw, 300px"
+              alt="Photo 1" class="composition__photo composition__photo--p1" src="img/nat-1-large.jpg">
+
+            <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" sizs="(max-width: 900px) 20vw (max-width: 600px) 30vw, 300px"
+              alt="Photo 2" class="composition__photo composition__photo--p2" src="img/nat-2-large.jpg">
+
+            <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" sizs="(max-width: 900px) 20vw (max-width: 600px) 30vw, 300px"
+              alt="Photo 3" class="composition__photo composition__photo--p3" src="img/nat-3-large.jpg">
+
+            <!--
             <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
             <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
             <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+            -->
           </div>
         </div>
       </div>
 
     </section>
 
-    <section class="section-features">
+    <section class="section-features" id="section-features">
       <div class="row">
 
         <div class="col-1-of-4">
@@ -257,7 +269,7 @@
     </section>
 
 
-    <section class="section-stories">
+    <section class="section-stories" id="section-stories">
       <div class="bg-video">
         <video class="bg-video__content" autoplay muted loop>
           <source src="img/video.mp4" type="video/mp4">
@@ -309,7 +321,7 @@
 
     </section>
 
-    <section class="section-book">
+    <section class="section-book" id="section-book">
       <div class="row">
         <div class="book">
           <div class="book__form">
@@ -364,9 +376,15 @@
 
   </main>
 
-  <footer class="footer">
+  <footer class="footer" id="footer">
     <div class="footer__logo-box">
-      <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo">
+
+      <picture class="footer__logo">
+        <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
+        <img srcset="img/logo-green-2x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo" src="img/logo-green-2x.png">
+      </picture>
+
+
     </div>
     <div class="row">
       <div class="col-1-of-2">
